--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
     <nav class="navbar sticky-top navbar-light bg-light" >
         <div class="container">
           <a class="navbar-brand mx-auto" href="#">
-            <img src="images/logo.svg" alt="header" width="560" height="80">
+            <img src="AssembleReDesign.github.io/logo.svg" alt="header" width="560" height="80">
           </a>
         </div>
       </nav>
       <div class="container px-5">
         <div class="row align-items-start p-4">
           <div class="col-md-8 ">
-            <img src="images/UQ.jpg" alt="img1" class="w-100">
+            <img src="AssembleReDesign.github.io/UQ.jpg" alt="img1" class="w-100">
           </div>
           <div class="col-md-4">
             <h1>重建資訊架構</h1>
@@ -75,7 +75,7 @@
         </div>
         <div class="row align-items-start p-4">
           <div class="col-md-8 ">
-            <img src="images/web疫苗.jpg" alt="img2" class="w-100">
+            <img src="AssembleReDesign.github.io/web疫苗.jpg" alt="img2" class="w-100">
           </div>
           <div class="col-md-4">
             <h1>重建資訊架構</h1>
@@ -89,7 +89,7 @@
         </div>
         <div class="row align-items-start p-4">
           <div class="col-md-8 ">
-            <img src="images/發票.jpg" alt="img3" class="w-100">
+            <img src="AssembleReDesign.github.io/發票.jpg" alt="img3" class="w-100">
           </div>
           <div class="col-md-4">
             <h1>更換風格</h1>
