--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <nav class="navbar sticky-top navbar-light bg-light" >
         <div class="container">
           <a class="navbar-brand mx-auto" href="#">
-            <img src="AssembleReDesign.github.io/logo.svg" alt="header" width="560" height="80">
+            <img src="![](/logo.svg)" alt="header" width="560" height="80">
           </a>
         </div>
       </nav>
