--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="container px-5">
         <div class="row align-items-start p-4">
           <div class="col-md-8 ">
-            <img src="![](AssembleReDesign.github.io/UQ.jpg)" alt="img1" class="w-100">
+            <img src="UQ.jpg" alt="img1" class="w-100">
           </div>
           <div class="col-md-4">
             <h1>重建資訊架構</h1>
