--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
         <div class="row align-items-start p-4">
           <div class="col-md-8 ">
-            <img src="AssembleReDesign.github.io/web疫苗.jpg" alt="img2" class="w-100">
+            <img src="web疫苗.jpg" alt="img2" class="w-100">
           </div>
           <div class="col-md-4">
             <h1>重建資訊架構</h1>
@@ -89,7 +89,7 @@
         </div>
         <div class="row align-items-start p-4">
           <div class="col-md-8 ">
-            <img src="AssembleReDesign.github.io/發票.jpg" alt="img3" class="w-100">
+            <img src="發票.jpg" alt="img3" class="w-100">
           </div>
           <div class="col-md-4">
             <h1>更換風格</h1>
