--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <div class="col-md-4">
             <h1>重建資訊架構</h1>
             <p class="hide-scroll LHight">
-              介面使用過多紅色字體，無法辨識資訊的層級，並將中文資訊和英文資訊融合成同一頁面，使資訊過於冗長，透過圖面icon和簡潔的資訊替代過多紅色字體，將中英語言分開表示。
+              介面使用過多紅色字體，無法辨識資訊的層級，並將中文資訊和英文資訊融合成同一頁面，使資訊過於冗長。/n透過圖面icon和簡潔的資訊替代過多紅色字體，將中英語言分開表示。
             </p>
             <div class="row">
               <a class="col-12 btn btn btn-aa" href="https://www.figma.com/proto/5kFKkOwAEiPS2orYc9aAMo/%E7%96%AB%E8%8B%97%E5%B9%B3%E5%8F%B0web?page-id=0%3A1&node-id=19%3A283&viewport=241%2C48%2C0.14&scaling=scale-down-width&starting-point-node-id=19%3A283" role="button">More</a>
